removed and changed that relates to single device
